# stooge-router

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  install-singbox-updater.sh  pyproject.toml
manifests/: configmap.yaml  cronjob.yaml  namespace.yaml  secret.yaml
src/: download_vpn_subscription.py  generate_singbox_config.py  models.py  normalize_vless_subscription.py  run_subscription_pipeline.py  settings.py  upload_to_minio.py
